完善Service和Controller